# metricq-manager

./: .gitignore  Dockerfile  Readme.md  manager.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker.yml  integration-tests-trigger.yml
dataheap2_manager/: __init__.py  manager.py
metricq_manager/: __init__.py  cmd.py  config_parser.py  db.py  logging.py  manager.py  queue_manager.py  rabbitmq.py  types.py
tests/: test_config_parser.py  test_manager.py  test_queue_manager.py
tools/: db-predeclare.py  queue-delete-bindings.py
