# metricq
# Copyright (C) 2020 ZIH, Technische Universitaet Dresden, Federal Republic of Germany
#
# All rights reserved.
#
# This file is part of metricq.
#
# metricq is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# metricq is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with metricq.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = metricq_manager
version = 0.1
author = TU Dresden

[options]
packages =
    metricq_manager
install_requires =
    metricq ~= 1.1
    aio-pika >= 4.8.0
    aiomonitor
    click
    click-completion
    click-log
    colorama
    aiocouch
    yarl
python_requires = >=3.8

[options.extras_require]
journallogger =
    systemd
test =
    pytest
    pytest-asyncio
    pytest-mock
    pytest-cov
dev =
    %(test)s
    tox

[options.entry_points]
console_scripts =
    metricq-manager = metricq_manager:manager_cmd
